# QuSpin

./: .buildinfo  .gitignore  BitOps.py  BitOps.py~  ED_test.py  Examples.html  HamiltonianOperator_test.py  Installation.html  LICENSE.rst  MBL_max_ent.py  README.md  ReadWrite.py  Sent_test.py  TODO_0.3.4  TODO_0.3.4.txt  __init__.py  a.py  basis.html  build_ext_inplace_win.bat  clean_files.sh  coherent_state.py  compile_cython.py  conda_build_config.yaml  diag_ensemble_test.py  doc_to_do.txt  documentation.ipynb  energy_bug.py  example2.py  exp_op_test.py  fermion_MBL.py  fermions_example.py  genindex.html  get_vec_test.py  index.html  lanzcos.py  make_docs.sh  meta.yaml  objects.inv  obs_vs_time_test.py  observables_test.py  (+31 more)
Basis/: Basis.py  BitOps.py  OBC_Basis.py  PBC_Basis.py  SpinOps.py  Z_Basis.py  __init__.py
application/: quspin_app.py
conda.recipe/: README.md
doc/: Makefile
docs/: Examples.html  Installation.html  New_Features.html  ask_a_question.html  basis.html  example_scripts.html  genindex.html  global.html  index.html  jupyter_notebooks.html  new_features.html  objects.inv  operators.html  parallelization.html  py-modindex.html  report_a_bug.html  search.html  searchindex.js  tools.html  user_basis.html
downloads/: BHM.ipynb  GPE.ipynb  example0.py  example1.py  example10.py  example2.py  example3.py  example4.py  example5.py  example7.py  example8.py  example9.py
exact_diag_py/: __init__.py  setup.py  spins.py  spins1D.py  toolbox.py
examples/: README.md  boson_MBL.py  example0.html  example1.html  example10.html  example2.html  example2.py  example3.html  example4.html  example4.py  example5.html  example5.py  example6.html  example6.py  example7.html  example7.py  example8.html  example8.py  example9.html  example9.py  fermion_MBL.py  real_vs_cpx_valued_ODE.py  spin_MBL.py
html/: .buildinfo  Examples.html  Installation.html  basis.html  genindex.html  index.html  objects.inv  operators.html  py-modindex.html  search.html  searchindex.js  tools.html
modules/: index.html
notes/: contributions.ipynb
py_lapack/: __init__.py  makefile  py_lapack.py  py_lapack_wrap.f90  setup.py
qspin/: setup.py
quspin/: __init__.py  setup.py
sources/: Installation.rst.txt
sphinx/: Makefile  make.bat  requirements.txt  update_docs.sh
sphinx/googleanalytics/: disperse.conf  setup.cfg  setup.py
sphinx/googleanalytics/sphinxcontrib/: googleanalytics.py
sphinx/googleanalytics/sphinxcontrib_googleanalytics.egg-info/: PKG-INFO  SOURCES.txt
test/: test_ED.py  test_ED_fermions.py  test_ED_spin.py  test_ED_spinful_fermions.py  test_FHM_energies.py  test_FHM_energies_symm_adv.py  test_Floquet.py  test_Floquet_t_vec.py  test_Jordan_Wigner.py  test_Lanczos.py  test_Op_bra_ket.py  test_Op_shift_sector.py  test_Op_shift_sector_corr.py  test_array_ints_conversion.py  test_basis_entropy.py  test_basis_entropy_sparse.py  test_basis_particle_sectors.py  test_block_tools.py  test_boson_vs_ho.py  test_boson_vs_spin.py  test_csr_matvec.py  test_diag_ensemble.py  test_ent_basis_vs_tools.py  test_entropy_pure.py  test_evolve.py  test_expm_multiply_parallel.py  test_expm_multiply_parallel_batch.py  test_gen_evolve.py  test_general_bitops.py  test_general_spin_get_vec.py  test_general_spin_opstr.py  test_general_spinless_fermion_opstr.py  test_general_spinless_majorana_opstr.py  test_get_amp.py  test_ham_project_to.py  test_hamiltonian.py  test_higher_spin.py  test_inplace_op.py  test_local_entropy.py  test_matvec.py  (+37 more)
tests/: ED_fermions_test.py  ED_spin_test.py  ED_spinful_fermions_test.py  ED_test.py  ED_test_fermions.py  ED_test_spin.py  ED_test_spinful_fermions.py  FHM_energies_symm_adv_test.py  FHM_energies_test.py  Floquet_t_vec_test.py  Floquet_test.py  HamiltonianOperator_test.py  Jordan_Wigner_test.py  Lanczos_test.py  Op_bra_ket_test.py  Op_int_state_test.py  Op_shift_sector_corr_test.py  Op_shift_sector_test.py  Sent_speed.py  (+83 more)
(+1186 files in other folders)
