[project]
name = "quspin-python"
version = "1.0.0"
description = "A Python package for exact diagonalization calculations of quantum manybody systems."
authors = [
    {name = "Phillip Weinberg, Marin Bukov", email = "weinbe58@gmail.com"},
]
dependencies = [
    "quspin-extensions>=0.1.3",
    "parallel-sparse-tools>=0.1.3",
    "numpy>=2.0.0",
    "dill>=0.3.8",
    "scipy>=1.13.1",
    "matplotlib>=3.9.0",
    "numexpr>=2.10.1",
    "numba>=0.60.0",
    "six>=1.16.0",
    "joblib>=1.4.2",
]
requires-python = "<3.13,>=3.9"
readme = "README.md"
license = {text = "BDS-3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.0",
    "black>=24.4.2",
    "pytest>=8.3.1",
    "sphinx>=7.4.7",
]


[tool.pdm.scripts]
_.env_file = "./.env"
upload = "python -m twine upload -r bloqade dist/*"
build = {cmd = "pdm build"}
publish = {composite = ["build", "upload"]}
test = {shell = "pytest -x"}