[metadata]
name = sphinxcontrib-googleanalytics
version = 0.3
url = https://github.com/sphinx-contrib/googleanalytics
download_url = http://pypi.python.org/pypi/sphinxcontrib-googleanalytics
project_urls =
    Repository=https://github.com/sphinx-contrib/googleanalytics
license = BSD
author = Domen Kozar
author_email = domen@dev.si
description = Sphinx extension googleanalytics
long_description = file:README.rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation
    Topic :: Utilities
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = Sphinx>=0.6
namespace_packages = sphinxcontrib

[egg_info]
tag_build = dev
tag_date = true

[aliases]
release = egg_info -RDb ''
